--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,8 +34,11 @@ section#login{
     background-color: white;
     width: 250px;
     height: 500px;
-    border-radius: 20px;box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.500);
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.500);
 
+    transition: wwidth 0.3s, heigth 0.3s; /* animacao na transicao das tela*/
+    transition-timing-function: ease;/* para dar uma suavisada, ou seja nao vai acelerar e nen desacelerar durant a transicao das telas*/
 }
 
 section#login > div#imagem{
