--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,7 +44,7 @@ section#login{
 section#login > div#imagem{
     display: block;
     background: #5f2c82 url(../imagens/predio.jpg) no-repeat;
-    background: cove;
+    background: cover;
     background-position: center center;
     height: 200px;
 }
