--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,47 +8,54 @@ Desketop: 992 px até 1200px
 Grandes Telas: acima de 1200px
 */
 
-@media screen and (min-width: 768px) and (max-width: 992px) 
-{
+@media screen and (min-width: 768px) and (max-width: 992px) {
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
-    section#login{ 
-        width: 80vw;} 
 
-    section#login > div#imagem{
-        float: left; 
-        width: 30%; 
-        height: 100%;}
-
-    section#login > div#formulario{
-        float: right; 
-        width: 70%;}
-}
- 
- @media screen and (min-width: 992px) 
- {
-    body{
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
-    }
     section#login {
-        width: 950px; }
-
-    section#login > div#imagem {
-        float: right;
-        width: 50%;
-        height: 100%;
-    }
-
-    section#login > div#formulario {
+        width: 80vw;
+        height: 300px;
+   }
+   
+   section#login > div#imagem {
         float: left;
-        width: 50%;
+        width: 30%;
+        height: 100%;
+   }
+
+   section#login > div#formulario {
+        float: right;
+        width: 70%;
+   }
+}
+
+@media screen and (min-width: 992px) {
+    body{
+        background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
-    div#formulario > h1{
-       font-size: 2em;
-    }
-    div#formulario > p {
-        font-size: 1.2em;
-    }
- }
+    section#login {
+        width: 950px;
+        height: 350px;
+}
+
+section#login > div#imagem {
+    float: right;
+    width: 50%;
+    height: 100%;
+}
+
+section#login > div#formulario {
+    float: left;
+    width: 50%;
+}
+
+div#formulario > h1{
+    font-size: 2em;
+}
+
+div#formulario > p{
+    font-size: 1.2em;
+}
+}
