--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,16 +28,16 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+   
     overflow: hidden; /* tudo que tiver do lado de fora da borda raiada vai ficar escondido*/
-
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.500);
+    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.500);  
 
-    transition: wwidth 0.3s, heigth 0.3s; /* animacao na transicao das tela*/
+    transform: translate(-50%, -50%);
+    transition: width 0.3s, height 0.3s;/* animacao na transicao das tela*/
     transition-timing-function: ease;/* para dar uma suavisada, ou seja nao vai acelerar e nen desacelerar durant a transicao das telas*/
 }
 
@@ -53,48 +53,59 @@ section#login > div#formulario{
     display: block;
     padding: 10px;
 }
+
 div#formulario > h1{
     text-align: center;
     margin-bottom: 10px;
 }
-div#formulario > p {
+
+div#formulario > p{
     font-size: 0.8em;
 }
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
     border-radius: 8px;
     margin: 5px 0px;
-} 
-div.campo> label {
+}
+
+div.campo > label{
     display: none;
 }
 
 div.campo > i {
     color: white;
-    background-color: black;
+    /*background-color: black;*/
     font-size: 2em;
     width: 40px;
     padding: 5px;
+
 }
 
-div.campo > input {
-    background-color: #94cfcd;
-    font-size: 1em;
-    width: calc(100%-40px);
-    height: 100%;
-    border: 0px;
-    border-radius: 8px;
-    
-}
+div.campo > input{
+   background-color: #94cfcd;
+   font-size: 1em;
+   width: calc(100% - 41px);
+   height: 100%;
+   border: 0px;
+   border-radius: 8px;
+   float: right;
+   text-align: center;
+  }
 
-form >input[type=submit]{
+  div.campo > input:focus-within{
+    background-color: white;
+  }/*quando clica no capo email ou senha, da foco deixando brando para digitar*/
+
+form > input[type=submit] {
     display: block;
     font-size: 1em;
-    width: 100%;height: 40px;
+    width: 100%;
+    height: 40px;
     background-color: #49a09d;
     color: white;
     border: none;
@@ -102,11 +113,11 @@ form >input[type=submit]{
     cursor: pointer;
 }
 
-form > input[type=submit]:hover {
+form > input[type=submit]:hover{
     background-color: #2d6462;
 }
 
-form > a.botao{
+form > a.botao {
     display: block;
     text-align: center;
     font-size: 1em;
@@ -122,10 +133,9 @@ form > a.botao{
 }
 
 form > a.botao:hover{
-    background-color: #6cd3cf
+    background-color: #6cd3cf;
 }
 
 form > a.botao > i {
     font-size: 0.8em;
 }
-  
